# civil-resistance-analysis

./: README.md  pyproject.toml
assignment_2023_2/: wcrw_v2.ipynb
civil_resistance_analysis/: analysis.ipynb
