[tool.poetry]
name = "civil-resistance-analysis"
version = "0.1.0"
description = ""
authors = ["nickkatsios <t8200071@aueb.gr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.2"
pandas = "^2.1.3"
jupyter = "^1.0.0"
ipykernel = "^6.26.0"
matplotlib = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
